# mfx

./: .gitignore  LICENSE  NOTICE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml  native-companion-release.yml
docs/: native-companion-design.md
native-companion/: Cargo.toml  README.md
native-companion/src/: audio.rs  engine.rs  lib.rs  main.rs  protocol.rs  server.rs
native-companion/src/dsp/: comp.rs  delay.rs  drive.rs  filter.rs  gain.rs  limiter.rs  mod.rs  reverb.rs  tremolo.rs
native-companion/tests/: handshake.rs
public/: CNAME  manifest.webmanifest  sw.js
src/: App.tsx  main.tsx  registerServiceWorker.ts  styles.css  vite-env.d.ts
src/audio/: AudioEngine.test.ts  AudioEngine.ts  contracts.test.ts  contracts.ts  latency.test.ts  latency.ts  monitorMode.test.ts  monitorMode.ts  rack.worklet.test.ts  rack.worklet.ts  recorder.worklet.ts  resolve.test.ts  resolve.ts  testSource.test.ts  testSource.ts
src/native/: nativeCompanion.test.ts  nativeCompanion.ts  patchSubset.test.ts  patchSubset.ts
src/performance/: morph.test.ts  morph.ts  motion.test.ts  motion.ts
src/recording/: wav.test.ts  wav.ts
src/sharing/: patchLink.test.ts  patchLink.ts
src/storage/: factoryPresets.test.ts  factoryPresets.ts  presets.test.ts  presets.ts
src/transport/: linkBridge.test.ts  linkBridge.ts
src/ui/: EffectModal.tsx  Knob.tsx  MacroBank.tsx  Meters.tsx  PedalSlot.tsx  Rack.tsx  ResponseGraph.tsx  Snapshots.tsx  StartOverlay.tsx  TransportBar.tsx  XYPad.tsx  format.ts  ui.css  (+1 more)
(+55 files in other folders)
